[gd_scene load_steps=51 format=2]

[ext_resource path="res://Scripts/Characters/EnemyScript/EnemyScript.gd" type="Script" id=1]
[ext_resource path="res://Images/Characters/Enemy/Enemies.png" type="Texture" id=2]
[ext_resource path="res://Images/UI/CharacterTurnArrow.png" type="Texture" id=3]
[ext_resource path="res://Images/UI/MissIndicator.png" type="Texture" id=4]
[ext_resource path="res://Images/UI/EnemyHealthUnder.png" type="Texture" id=5]
[ext_resource path="res://Images/UI/EnemyHealth.png" type="Texture" id=6]
[ext_resource path="res://Images/UI/EnemyHealthOver.png" type="Texture" id=7]
[ext_resource path="res://Fonts/FieldGuide.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Images/Characters/Enemy/DeathLady.png" type="Texture" id=9]
[ext_resource path="res://Images/Characters/Enemy/IceAngel.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 0, 30, 30, 30 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 0, 60, 30, 30 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 30, 60, 30, 30 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 60, 60, 30, 30 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 90, 60, 30, 30 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 0, 90, 30, 30 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 30, 90, 30, 30 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 10 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 10 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 10 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 10 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 10 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 10 )
region = Rect2( 24, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 9 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 9 )
region = Rect2( 0, 30, 30, 30 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 60, 30, 30, 30 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 30, 30, 30, 30 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 90, 30, 30, 30 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 29 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 18 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 26 ) ],
"loop": true,
"name": "6",
"speed": 4.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "4",
"speed": 7.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 43 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "3",
"speed": 3.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 23 ) ],
"loop": true,
"name": "2",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Hover"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.00820437, 0.116649, 0 ), Vector3( -0.00820437, 0.154828, 0 ), Vector3( -0.00820437, 0.116649, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.00820437, 0.116649, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0.0640624, 0, 0 ), Vector3( -0.0362092, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.01, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.01, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -0.01, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.01, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.882353, 0.12549, 0.176471, 1 ), Color( 1, 1, 1, 1 ), Color( 0.882353, 0.12549, 0.176471, 1 ), Color( 0.882353, 0.12549, 0.176471, 1 ), Color( 1, 1, 1, 1 ), Color( 0.882353, 0.12549, 0.176471, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite3D:opacity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.13, 1.0, 0.13, 0.13, 1.0, 0.13 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite3D:opacity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Miss"
tracks/0/type = "value"
tracks/0/path = NodePath(".:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.0130129, 0.0659321, 0 ), Vector3( -0.0130129, 0.151001, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.0130129, 0.0659321, 0 ) ]
}

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("HealthBar/ViewportContainer/Viewport")

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("DamageFont/ViewportContainer/Viewport")

[sub_resource type="DynamicFont" id=11]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=12]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.123267, 0.00970385 ), Vector3( 0, 0.212237, 0.00970385 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.123267, 0.00970385 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HealthBar:opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite3D:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.0127772, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.0116373, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -0.0127772, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.0116373, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -0.0127772, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.0116373, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -0.0127772, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.0116373, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -0.0127772, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.0116373, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -0.0127772, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.0116373, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -0.0127772, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0.0116373, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -0.0127772, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite3D:opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HealthBar:opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite3D:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[node name="Enemy" type="Spatial"]
script = ExtResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
frames = SubResource( 1 )
animation = "0"
playing = true

[node name="TurnArrow" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00820437, 0.116649, 0 )
visible = false
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TurnArrow"]
autoplay = "Hover"
anims/Hover = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Hurt = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="MissIndicator" type="Sprite3D" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.0130129, 0.0659321, 0 )
opacity = 0.0
texture = ExtResource( 4 )

[node name="MissAnimationPlayer" type="AnimationPlayer" parent="MissIndicator"]
anims/Miss = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="HealthBar" type="Sprite3D" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.146857, -0.0179673 )
texture = SubResource( 14 )

[node name="ViewportContainer" type="ViewportContainer" parent="HealthBar"]
margin_left = -106.0
margin_right = -58.0
margin_bottom = 17.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="HealthBar/ViewportContainer"]
size = Vector2( 48, 17 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HealthBar/ViewportContainer/Viewport"]

[node name="HealthBarUnder" type="TextureProgress" parent="HealthBar/ViewportContainer/Viewport/Camera2D"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 220.0
value = 220.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 0.882353, 0.12549, 0.176471, 1 )

[node name="HealthBar" type="TextureProgress" parent="HealthBar/ViewportContainer/Viewport/Camera2D"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 220.0
value = 220.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 6 )

[node name="Tween" type="Tween" parent="HealthBar/ViewportContainer/Viewport"]

[node name="DamageFont" type="Sprite3D" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.123267, 0.00970385 )
opacity = 0.0
texture = SubResource( 10 )

[node name="ViewportContainer" type="ViewportContainer" parent="DamageFont"]
margin_left = -48.0
margin_top = -26.0
margin_right = -3.0
margin_bottom = -7.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="DamageFont/ViewportContainer"]
size = Vector2( 45, 19 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="DamageFont/ViewportContainer/Viewport"]

[node name="Label" type="Label" parent="DamageFont/ViewportContainer/Viewport"]
modulate = Color( 0.882353, 0.12549, 0.176471, 1 )
margin_left = 2.0
margin_right = 42.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 11 )
text = "15"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageNumAnimationPlayer" type="AnimationPlayer" parent="DamageFont"]
anims/Damage = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="DieAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 15 )
anims/RESET = SubResource( 16 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="MissIndicator/MissAnimationPlayer" to="." method="_on_MissAnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="DieAnimationPlayer" to="." method="_on_DieAnimationPlayer_animation_finished"]
